# openzl

./: .gitignore  .gitmodules  BUCK  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  defs.bzl
cli/: BUCK  CMakeLists.txt  version.h  version.h.in  zli.cpp
cli/args/: ArgsUtils.cpp  ArgsUtils.h  BUCK  BenchmarkArgs.h  CMakeLists.txt  CompressArgs.h  DecompressArgs.h  GlobalArgs.h  TrainArgs.h
cli/commands/: BUCK  cmd_benchmark.cpp  cmd_compress.cpp  cmd_decompress.cpp  cmd_inspect.cpp  cmd_list_profiles.cpp  cmd_train.cpp
cli/tests/: BUCK  CMakeLists.txt  README.md  abstract_compression_test.py  cli_formats_tests.py  cli_integration_tests.py  cli_train_tests.py  command_utils.py  file_utils.py
cli/tests/profile_files/sddl2/: simple_description.sddl
cli/tests/sample_files/ml_selector/: ml_sel_num_64_0  ml_sel_num_64_1  ml_sel_num_64_2  ml_sel_num_64_3  ml_sel_num_64_4
cli/tests/sample_files/zstd_dict/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
cli/tests/unittest/: UtilTest.cpp
cli/utils/: BUCK  CMakeLists.txt  compress_profiles.cpp  compress_profiles.h  parse.cpp  parse.h  util.cpp  util.h
cpp/: BUCK
tests/compat/: CMakeLists.txt  c99_compat.c
tools/: BUCK  CMakeLists.txt  zstrong_cpp.cpp  zstrong_json.cpp  zstrong_ml.cpp  zstrong_ml.h
tools/arg/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  parsed_args.cpp  parsed_args.h  positional.h
tools/arg/tests/: BUCK  arg_parser_test.cpp
tools/compressor_serialization/: BUCK  to_cbor.py
tools/gbt_predictor/: BUCK  zstrong_gbt_predictor.h
tools/io/: CMakeLists.txt  InputSet.cpp  InputSetBuilder.h  InputSetDir.cpp  InputSetMulti.cpp  InputSetStatic.cpp
tools/io/tests/: BUCK
tools/logger/: CMakeLists.txt  Logger.h
tools/ml_selector/: BUCK  CMakeLists.txt  README.md  ml_features.cpp  ml_features.h  ml_selector_graph.c  ml_selector_graph.h  ml_selector_trainer.cpp  ml_selector_trainer.h  ml_selector_trainer_utils.cpp  ml_selector_trainer_utils.h  ml_selector_tuner.cpp  ml_selector_tuner.h  test_mlSelectorGraph.cpp
tools/ml_selector/tests/: BUCK  test_mlSelectorGraph.cpp  test_mlSelectorTrainer.cpp
tools/parquet/: CMakeLists.txt  make_canonical_parquet.cpp
tools/protobuf/: BUCK  CMakeLists.txt  DescriptorLoader.cpp  DescriptorLoader.h  DynamicMessageHelper.h  ProtoDeserializer.cpp  ProtoGraph.cpp  ProtoSerializer.cpp  ProtoSerializer.h  cli.cpp  serialization_utils.h
tools/protobuf/tests/: BUCK  fuzz_protobuf_serializer.cpp  test_descriptor_loader.cpp  test_dynamic_messages.cpp  test_proto_serializer.cpp  utils.cpp  utils.h
tools/protobuf/tests/resources/: test_imported.proto  test_invalid.proto
tools/protobuf_dynamic/: CMakeLists.txt  DescriptorLoader.cpp  DescriptorLoader.h  DynamicMessageHelper.cpp  DynamicMessageHelper.h  cli_dynamic.cpp  serialization_utils.cpp  serialization_utils.h
tools/protobuf_dynamic/tests/: test_descriptor_loader.cpp  test_dynamic_messages.cpp  test_imported.proto  test_invalid.proto  test_main.proto  test_polymorphic_serialize.cpp  test_simple.proto
tools/py/: BUCK  pybind_helpers.cpp  zstrong_json_pybind.cpp  zstrong_ml.py  zstrong_ml_pybind.cpp
tools/py/tests/: BUCK  test_zstrong_json.py  test_zstrong_ml.py
tools/sddl/: CMakeLists.txt
tools/sddl/assembler/: Bytecode_spec.md  README.md  assembler.py  generate_opcodes.py  opcodes_generated.py  openzl_opcodes.def  sddl2_assembler.py
tools/sddl/assembler/tests/: README.md  regenerate_expected.sh  test_assembler.py  test_empty.asm  test_halt.asm  test_push_halt.asm  test_three_zeros.asm  tests_phase2.py
tools/sddl/compiler/: AST.cpp  AST.h  Grammar.cpp  Grammar.h  Syntax.cpp  Syntax.h
tools/sddl/compiler/tests/: BUCK
tools/sddl2/: CMakeLists.txt
tools/sddl2/assembler/: Assembler.cpp  Assembler.h  Assembly_opcodes.md  Assembly_reference.md  BUCK  Bytecode_spec.md  OpcodesGenerated.cpp  OpcodesGenerated.h  README.md  generate_assembly_opcodes.py  generate_opcodes.py  main.cpp  sddl2_assembler.py
tools/sddl2/compiler/: AST.cpp  AST.h  BUCK  Compiler.cpp  Compiler.h  Exception.cpp  Exception.h  Grammar.cpp  Grammar.h  Grouper.cpp  Grouper.h  Grouping.cpp  Grouping.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  Serializer.cpp  Serializer.h  Source.cpp  Source.h  Syntax.cpp  Syntax.h  Syntax.md  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Utils.h  main.cpp
tools/streamdump/: BUCK  stream_dump2.h
tools/tests/: BUCK  fuzz_zstrong_ml.cpp  test_zstrong_json.cpp  test_zstrong_ml.cpp  test_zstrong_ml_models_generator.py
tools/time/: timefn.h
tools/training/: BUCK  CMakeLists.txt  train.cpp  train.h  train_params.h  trained_candidate.cpp  trained_candidate.h
tools/training/ace/: BUCK  ace.cpp  ace.h  ace_combination.cpp  ace_combination.h  ace_compressor.cpp  ace_compressors.cpp  automated_compressor_explorer.h
tools/training/clustering/: BUCK  clustering_config_builder.cpp  clustering_config_builder.h  clustering_graph_trainer.cpp  clustering_graph_trainer.h  compression_utils.cpp  compression_utils.h  train_api.cpp
tools/training/dict/: BUCK  base_dict_trainer.cpp  base_dict_trainer.h  zstd_dict_trainer.cpp  zstd_dict_trainer.h
tools/training/graph_mutation/: BUCK  graph_mutation_utils.cpp  graph_mutation_utils.h
tools/training/sample_collection/: BUCK  introspection_hooks.cpp  introspection_hooks.h  training_sample_collector.cpp  training_sample_collector.h
tools/training/tests/: BUCK  test_ace_combination.cpp  test_clustering.cpp  test_clustering_benchmarks.cpp  test_clustering_config_builder.cpp  test_dict_training.cpp  test_genetic_algorithm.cpp  test_sample_collection.cpp  test_sample_limiter.cpp
tools/training/utils/: BUCK  genetic_algorithm.cpp  genetic_algorithm.h  serialized_compressor_internal.cpp  serialized_compressor_internal.h  thread_pool.h
tools/visualization_app/: BUCK  package.json  tsconfig.app.json  tsconfig.json  tsconfig.test.json  vite.config.ts
tools/visualization_app/src/: App.tsx
tools/visualization_app/tests/: codecDag.test.ts  createTestModels.ts  interactiveChunkGraph.test.ts  interactiveStreamdumpGraph.test.ts
(+2083 files in other folders)
